Fix  test